# chatbot_fastapi_langchain

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MESSAGE_FLOW_DIAGRAM.md  MESSAGE_FLOW_OPTIMIZATION.md  PERFORMANCE.md  README.md  app_new.py  docker-compose.yml  init_db.py  main.py  migrate_db.py  pyproject.toml  requirements.txt
backend/: app.py  auth.py  db.py  llm.py
chat_app/: __init__.py
chat_app/application/: __init__.py  use_cases.py
chat_app/domain/: entities.py  repositories.py  services.py  value_objects.py
chat_app/infrastructure/: __init__.py  cache_service.py  llm_service.py  performance_monitor.py  postgresql_repositories.py  repositories.py
chat_app/interface/: __init__.py  app.py  base_handler.py  dependency_injection.py  rest_api.py  websocket_api.py
documentations/: ABSOLUTE_IMPORTS_SUMMARY.md  ARCHITECTURE_DDD.md  CLEANUP_SUMMARY.md  DIRECTORY_RENAME_SUMMARY.md  DOCKER_SETUP.md  MESSAGE_FLOW_DIAGRAM.md  MESSAGE_FLOW_OPTIMIZATION.md  PERFORMANCE.md  README.md  README_DDD.md  TEST_REFACTORING_SUMMARY.md
static/: app.js  index.html  styles.css
tests/: .gitignore  README.md  __init__.py  index.html  run_all_tests.py  run_tests.py  run_tests.sh  test_code_appearance.html  test_code_editor.html  test_memory_demo.html  test_smooth_streaming.html  test_streaming.html  test_typing_indicator.html
tests/frontend/: test_code_appearance.html  test_code_editor.html  test_index.html  test_memory_demo.html  test_smooth_streaming.html  test_streaming.html  test_typing_indicator.html
tests/integration/: test_api_endpoints.py  test_repositories.py  test_use_cases.py
tests/unit/: test_domain_architecture.py  test_domain_entities.py  test_domain_services.py  test_full_architecture.py
